--- a/index.html
+++ b/index.html
@@ -3,53 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team Randomizer</title>
+    <title>Pengacak Kelompok</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title has-text-centered">Team Randomizer</h1>
+        <h1 class="title has-text-centered">Pengacak Kelompok</h1>
         <div class="field">
           <input
             type="checkbox"
             id="hasLeaders"
             onclick="toggleLeadersInput()"
           />
-          <label class="checkbox" for="hasLeaders">Include Leaders</label>
+          <label class="checkbox" for="hasLeaders"
+            >Tambah Ketua (Opsional)</label
+          >
         </div>
         <div class="field" id="leadersField" style="display: none">
-          <label class="label">Leader Names</label>
+          <label class="label">Nama Pemimpin</label>
           <div class="control">
             <textarea
               class="textarea"
               id="leadersInput"
-              placeholder="Enter leader names, separated by commas"
+              placeholder="Masukkan nama pemimpin, pisahkan nama dengan koma (misal: ketua1, ketua2, ketua3)"
             ></textarea>
           </div>
         </div>
         <div class="field">
-          <label class="label">Participant Names</label>
+          <label class="label">Nama Anggota</label>
           <div class="control">
             <textarea
               class="textarea"
               id="namesInput"
-              placeholder="Enter names, separated by commas"
+              placeholder="Masukkan nama anggota, pisahkan nama dengan koma (misal: anggota1, anggota2, anggota3)"
             ></textarea>
           </div>
         </div>
         <div class="field">
-          <label class="label">Number of Teams</label>
+          <label class="label">Jumlah Tim</label>
           <div class="control">
             <input
               class="input"
               type="number"
               id="numTeams"
-              placeholder="Number of teams"
+              placeholder="Jumlah tim"
               min="1"
             />
           </div>
@@ -57,11 +63,13 @@
         <div class="field is-grouped">
           <div class="control">
             <button class="button is-primary" onclick="randomizeTeams()">
-              Randomize
+              Acak
             </button>
           </div>
           <div class="control">
-            <button class="button is-light" onclick="resetForm()">Reset</button>
+            <button class="button is-danger" onclick="resetForm()">
+              Reset
+            </button>
           </div>
         </div>
         <div id="teamsOutput" class="columns is-multiline"></div>
