--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           >
         </div>
         <div class="field" id="leadersField" style="display: none">
-          <label class="label">Nama Pemimpin</label>
+          <label class="label">Nama Ketua</label>
           <div class="control">
             <textarea
               class="textarea"
               id="leadersInput"
-              placeholder="Masukkan nama pemimpin, pisahkan nama dengan koma (misal: ketua1, ketua2, ketua3)"
+              placeholder="Masukkan nama ketua, pisahkan nama dengan koma (misal: ketua1, ketua2, ketua3)"
             ></textarea>
           </div>
         </div>
