ubah tim ke kelompok

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="field">
-          <label class="label">Jumlah Tim</label>
+          <label class="label">Jumlah Kelompok</label>
           <div class="control">
             <input
               class="input"
