--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               class="input"
               type="number"
               id="numTeams"
-              placeholder="Jumlah tim"
+              placeholder="Jumlah kelompok"
               min="1"
             />
           </div>
